# instantly-python-sdk

./: LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt
.cursor/rules/: agent-coding-standards.mdc
instantly/: __init__.py  client.py  config.py
instantly/api/: __init__.py  account.py  account_campaign_mapping.py  api_key.py  background_job.py  base.py  block_list_entry.py  campaign.py  custom_tag.py  email.py  email_verification.py  lead.py  lead_label.py  lead_list.py
instantly/models/: account.py  account_campaign_mapping.py  api_key.py  audit_log.py  background_job.py  base.py  block_list_entry.py  campaign.py  campaign_subsequence.py  custom_tag.py  email.py  email_verification.py  inbox_placement_analytics.py  inbox_placement_blacklist.py  inbox_placement_test.py  lead.py  lead_label.py  lead_list.py  workspace.py  workspace_group_member.py  workspace_member.py
tests/: __init__.py  conftest.py  test_account_api.py  test_account_campaign_mapping_api.py  test_api_key_api.py  test_background_job_api.py  test_block_list_entry_api.py  test_campaign_api.py  test_client.py  test_custom_tag_api.py  test_email_api.py  test_email_verification_api.py  test_lead_api.py  test_lead_label_api.py  test_lead_list_api.py
